samples/_failures_safe/1761512040_b9891e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5a0651f.c: In function ‘main’:
./samples/SAFE/__tmp_f5a0651f.c:158:5: error: expected declaration or statement at end of input
  158 |     for (size_t i = 0; i < decompressed.size; i++) {
      |     ^~~
./samples/SAFE/__tmp_f5a0651f.c:158:5: error: expected declaration or statement at end of input
